<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">Claims Submission</string>
    <string name="currency">Birr</string>
    <string name="price_with_currency">Birr %1$s</string>
    <string name="exit_form_alert">Are you sure you want to exit?</string>
    <string name="menu_switch_language" translatable="false">Switch Language (ቋንቋ ቀይር)</string>
    <string name="menu_export_db" translatable="false">Export database</string>
    <string name="menu_export_unsynced_claims" translatable="false">Export unsynced claims</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="delete_claim_confirmation">Delete this claim?</string>
    <string name="delete_changes_confirmation" translatable="false">Delete these changes?</string>
    <string name="delete_items_confirmation" translatable="false">Delete this item?</string>
    <string name="home_fragment_label">Claim Submission</string>
    <string name="check_in_label">Check-In Member</string>
    <string name="recent_label">Recent</string>
    <string name="prepare_label">Prepare Claims</string>
    <string name="returned_label">Returned Claims</string>
    <string name="pending_label">Pending Approval</string>
    <string name="language_label">Switch Language</string>
    <string name="status_label">Status</string>
    <string name="pending_claims_dialog_label">Enter security PIN</string>
    <string name="pending_claims_dialog_error_message">Invalid PIN</string>
    <string name="checked_in_patients_fragment_label">Checked-in patients</string>
    <string name="no_members">No members available</string>
    <string name="last_fetched_returned_encounters_label" translatable="false">Returned Claims</string>
    <string name="last_fetched_identification_events_label" translatable="false">Identification Events</string>
    <string name="unsynced_price_schedules_label" translatable="false">Price Schedules</string>
    <string name="provider_type_unclassified" translatable="false">Unclassified</string>
    <string name="provider_type_clinic" translatable="false">Health Center</string>
    <string name="provider_type_primary_hospital" translatable="false">Primary Hospital</string>
    <string name="provider_type_general_hospital" translatable="false">General Hospital</string>
    <string name="provider_type_tertiary_hospital" translatable="false">Tertiary Hospital</string>
    <string name="export_unsynced_claims_label" translatable="false"><u>Export Unsynced Claims</u></string>
    <string name="search_fragment_label">@string/search</string>
    <string name="slash" translatable="false">/</string>
    <string name="two_zeroes_placeholder" translatable="false">00</string>
    <string name="three_zeroes_placeholder" translatable="false">000</string>
    <string name="six_zeroes_placeholder" translatable="false">000000</string>
    <string name="start_claim_button">Start Claim</string>
    <string name="invalid_membership_error">Invalid membership number</string>
    <string name="scan_card">Scan card</string>
    <string name="search_name">Search name</string>
    <string name="cbhi_id_label">Search CBHI ID</string>
    <string name="cbhi_id_search_label">CBHI ID</string>
    <string name="member_search_fragment_label">@string/search</string>
    <string name="search_by_name">Search by name</string>
    <string name="loading_household" translatable="false">Loading member</string>
    <string name="download_error_message" translatable="false">Unable to download member</string>
    <string name="member_not_found_fragment_label">@string/search</string>
    <string name="member_not_found_message">Error loading member</string>
    <string name="member_not_found_detail">The member is not registered to this phone</string>
    <string name="enter_claim_manually_button_text">Enter manually</string>
    <string name="household_fragment_label">@string/search</string>
    <string name="member_list_item_gender_age" translatable="false">%1$s, %2$s</string>
    <string name="replace_card_notification">Needs renewal</string>
    <string name="membership_number_field_label">Member CBHI ID</string>
    <string name="name_field_label">Full name</string>
    <string name="birthdate_field_label">Birthdate</string>
    <string name="medical_record_number_field_label">Medical record number</string>
    <string name="photo_field_label">Photo</string>
    <string name="photo_panel_header_text">Photo</string>
    <string name="edit_input_add">Add</string>
    <string name="edit_input_edit">Edit</string>
    <string name="take_photo_button_text">Take photo</string>
    <string name="missing_medical_record_number">Medical record number is required</string>
    <string name="check_out_alert_dialog_title">Remove from checked in list?</string>
    <string name="check_out_alert_dialog_message">%1$s will be removed from the checked in list. You will no longer be able to submit a claim for their service.</string>
    <string name="diagnoses_and_billable_missing_dialog">Diagnoses and billables have not been downloaded yet, please sync before trying again.</string>
    <string name="membership_status_panel_header">Membership Status</string>
    <string name="member_status_field_label">Head of Household</string>
    <string name="beneficiary_status_field_label">Beneficiary</string>
    <string name="member_information_panel_header">Member Information</string>
    <string name="membership_expired_notification">Membership is expired</string>
    <string name="membership_unknown_notification">Membership status is unknown</string>
    <string name="visit_reason_label" translatable="false">Reason for visit</string>
    <string name="inbound_referral_date_label" translatable="false">Inbound referral date</string>
    <string name="follow_up_date_label" translatable="false">Follow-up issue date</string>
    <string name="missing_visit_reason" translatable="false">Reason for visit is required</string>
    <string name="visit_reason_prompt" translatable="false">Select a reason for visit…</string>
    <string name="visit_reason_referral" translatable="false">Referral</string>
    <string name="visit_reason_no_referral" translatable="false">No referral (catchment)</string>
    <string name="visit_reason_self_referral" translatable="false">Self-referral (bypass fee)</string>
    <string name="visit_reason_follow_up" translatable="false">Follow-up</string>
    <string name="visit_reason_emergency" translatable="false">Emergency</string>
    <string name="member_information_fragment_label">Member Information</string>
    <string name="member_name_label">Name</string>
    <string name="medical_record_number">Medical Record Number</string>
    <string name="membership_number_label">Member ID</string>
    <string name="gender_validation_error">Gender is required</string>
    <string name="name_validation_error">Name is required</string>
    <string name="three_names_validation_error">Three names are required</string>
    <string name="age_validation_error">Age is required</string>
    <string name="age_limit_validation_error">Age must be 200 or less</string>
    <string name="medical_record_number_validation_error">Medical record number is required</string>
    <string name="medical_record_number_length_validation_error">Medical record number must be 5 to 7 digits</string>
    <string name="yes">OK</string>
    <string name="missing_fields_validation_error">Some fields are missing</string>
    <string name="visit_type_fragment_label">Visit Type</string>
    <string name="visit_type_label">Visit Type</string>
    <string name="referral_label">Referred</string>
    <string name="referral_date_label">Referral Date</string>
    <string name="receiving_facility_validation_error">Receiving facility is required</string>
    <string name="referral_reason_validation_error">Referral reason is required</string>
    <string name="mark_as_stockout">Mark %s as stockout</string>
    <string name="referral_serial_number">Referral Number (optional)</string>
    <string name="referral_reason">Referral reason</string>
    <string name="referred_to_facility">Referred to facility</string>
    <string name="referral_reason_prompt">Select referral reason…</string>
    <string name="referred_to_facility_prompt">Select referred to facility…</string>
    <string name="referral_other_option">Other Referral Facility</string>
    <string name="further_consultation">Further consultation</string>
    <string name="drug_stockout">Drug stockout</string>
    <string name="investigative_tests">Investigative Tests</string>
    <string name="inpatient_care">Inpatient care</string>
    <string name="bed_shortage">Bed shortage</string>
    <string name="follow_up">Follow-up</string>
    <string name="patient_outcome">Patient outcome</string>
    <string name="patient_outcome_prompt">Select patient outcome…</string>
    <string name="outcome_cured_or_discharged">Cured/Discharged</string>
    <string name="outcome_referred">Referred</string>
    <string name="outcome_follow_up">Follow-up</string>
    <string name="outcome_refused_service">Refused service</string>
    <string name="outcome_expired">Deceased</string>
    <string name="outcome_other">Other</string>
    <string name="eth_datepicker_title">Date</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="eth_datepicker_day">Day</string>
    <string name="eth_datepicker_month">Month</string>
    <string name="eth_datepicker_year">Year</string>
    <string name="price" translatable="false">%1$s</string>
    <string name="member_info_section_label">Member Information</string>
    <string name="none">None</string>
    <string name="edit_claim_button">Edit Claim</string>
    <string name="claim_id_label">Claim ID</string>
    <string name="comments">Comments</string>
    <string name="provider_label">Provider</string>
    <string name="branch_label">EHIA</string>
    <plurals name="comment_age">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <string name="diagnoses" translatable="false">Diagnoses</string>
    <string name="date_of_service_label">Date of Service</string>
    <string name="comment_label">Comment</string>
    <string name="add_clickable"><u>Add</u></string>
    <string name="comment_prompt">Add a comment&#8230;</string>
    <string name="resubmit">Resubmit Claim</string>
    <string name="today">Today</string>
    <string name="claim_id_deleted">Claim ID %1$s was deleted</string>
    <string name="claim_id_submitted">Claim ID %1$s was submitted</string>
    <string name="empty_line_items_warning">Claim must contain line items</string>
    <string name="empty_comment_warning" translatable="false">Claim resubmission must have a comment</string>
    <string name="empty_visit_type" translatable="false">Claim must have a visit type</string>
    <string name="duplicate_claim_error">Already a claim submitted for this date of service</string>
    <string name="drug_and_supply">Drug and Supplies</string>
    <string name="service">Services and Procedures</string>
    <string name="lab">Laboratory Tests</string>
    <string name="select_prompt">Select…</string>
    <string name="edit_price_fragment_label">Edit Price</string>
    <string name="unit_price_label">Unit Price</string>
    <string name="quantity_label">Quantity</string>
    <string name="total_price_label">Total Price</string>
    <string name="pending_claims_fragment_label">Pending Approval</string>
    <string name="pending_claims_count_empty">No pending claims</string>
    <plurals name="pending_claims_count">
        <item quantity="one">%d pending claim</item>
        <item quantity="other">%d pending claims</item>
    </plurals>
    <string name="submit_selected_button">Submit Selected</string>
</resources>