<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/billable_details_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="@dimen/space16"
        android:paddingBottom="@dimen/space16"
        android:paddingLeft="@dimen/space16"
        android:paddingRight="@dimen/space16"
        android:elevation="@dimen/panelElevation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/billable_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/billable_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/billable_name"
            app:layout_constraintBottom_toBottomOf="parent" />

        <org.watsi.uhp.views.PriceChange
            android:id="@+id/price_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/edit_price_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/space24"
        android:paddingRight="@dimen/space16"
        android:paddingBottom="@dimen/space24"
        android:paddingLeft="@dimen/space16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/billable_details_container"
        app:layout_constraintEnd_toEndOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/unit_price_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/quantity_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/unit_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/unit_price_label"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/quantity_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/unit_price_layout"
            app:layout_constraintEnd_toStartOf="@id/total_price_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity_label"
                android:maxLength="3"
                android:imeOptions="actionDone"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/total_price_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/quantity_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/total_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/total_price_label"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>
    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space16"
        style="@style/PrimaryButton"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/edit_price_container" />

</android.support.constraint.ConstraintLayout>
